[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a `https://polkadot.network` node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0" # workspace properties
readme = "README.md"
authors.workspace = true
edition.workspace = true
version.workspace = true

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot.git"
version = "0.9.43"

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
tikv-jemallocator = "0.5.0"

# Crates in our workspace, defined as dependencies so we can pass them feature flags.
polkadot-cli = { path = "cli", features = [ "polkadot-native", "kusama-native", "westend-native", "rococo-native" ]  }
polkadot-node-core-pvf = { path = "node/core/pvf" }
polkadot-node-core-pvf-prepare-worker = { path = "node/core/pvf/prepare-worker" }
polkadot-overseer = { path = "node/overseer" }

[dev-dependencies]
assert_cmd = "2.0.4"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.2.0"
tokio = "1.24.2"
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
polkadot-core-primitives = { path = "core-primitives" }

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"erasure-coding/fuzzer",
	"primitives",
	"primitives/test-helpers",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/metrics",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/polkadot/constants",
	"runtime/kusama",
	"runtime/kusama/constants",
	"runtime/rococo",
	"runtime/rococo/constants",
	"runtime/westend",
	"runtime/westend/constants",
	"runtime/test-runtime",
	"runtime/test-runtime/constants",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/xcm-executor/integration-tests",
	"xcm/xcm-simulator",
	"xcm/xcm-simulator/example",
	"xcm/xcm-simulator/fuzzer",
	"xcm/pallet-xcm",
	"xcm/pallet-xcm-benchmarks",
	"xcm/procedural",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/chain-selection",
	"node/core/dispute-coordinator",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/pvf/common",
	"node/core/pvf/execute-worker",
	"node/core/pvf/prepare-worker",
	"node/core/pvf-checker",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/network/dispute-distribution",
	"node/overseer",
	"node/malus",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-types",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/gum",
	"node/gum/proc-macro",
	"node/metrics",
	"node/test/client",
	"node/test/performance-test",
	"node/test/service",
	"node/zombienet-backchannel",
	"rpc",
	"parachain",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"parachain/test-parachains/halt",
	"parachain/test-parachains/undying",
	"parachain/test-parachains/undying/collator",
	"utils/staking-miner",
	"utils/remote-ext-tests/bags-list",
	"utils/generate-bags",
]

[badges]
maintenance = { status = "actively-developed" }

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = {opt-level = 3}
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]
fast-runtime = [ "polkadot-cli/fast-runtime" ]
runtime-metrics = [ "polkadot-cli/runtime-metrics" ]
pyroscope = ["polkadot-cli/pyroscope"]
jemalloc-allocator = ["polkadot-node-core-pvf-prepare-worker/jemalloc-allocator", "polkadot-overseer/jemalloc-allocator"]

# Enables timeout-based tests supposed to be run only in CI environment as they may be flaky
# when run locally depending on system load
ci-only-tests = ["polkadot-node-core-pvf/ci-only-tests"]

[patch."https://github.com/paritytech/substrate"]
node-template = { path = "/home/herazeus/code/substrate/bin/node-template/node" }
frame-benchmarking = { path = "/home/herazeus/code/substrate/frame/benchmarking" }
frame-support = { path = "/home/herazeus/code/substrate/frame/support" }
frame-support-procedural = { path = "/home/herazeus/code/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/home/herazeus/code/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/home/herazeus/code/substrate/frame/support/procedural/tools/derive" }
sp-api = { path = "/home/herazeus/code/substrate/primitives/api" }
sp-api-proc-macro = { path = "/home/herazeus/code/substrate/primitives/api/proc-macro" }
sp-core = { path = "/home/herazeus/code/substrate/primitives/core" }
sp-core-hashing = { path = "/home/herazeus/code/substrate/primitives/core/hashing" }
sp-debug-derive = { path = "/home/herazeus/code/substrate/primitives/debug-derive" }
sp-externalities = { path = "/home/herazeus/code/substrate/primitives/externalities" }
sp-std = { path = "/home/herazeus/code/substrate/primitives/std" }
sp-storage = { path = "/home/herazeus/code/substrate/primitives/storage" }
sp-runtime-interface = { path = "/home/herazeus/code/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/home/herazeus/code/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/home/herazeus/code/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/home/herazeus/code/substrate/primitives/wasm-interface" }
sp-io = { path = "/home/herazeus/code/substrate/primitives/io" }
sp-keystore = { path = "/home/herazeus/code/substrate/primitives/keystore" }
sp-state-machine = { path = "/home/herazeus/code/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/home/herazeus/code/substrate/primitives/panic-handler" }
sp-trie = { path = "/home/herazeus/code/substrate/primitives/trie" }
sp-runtime = { path = "/home/herazeus/code/substrate/primitives/runtime" }
sp-application-crypto = { path = "/home/herazeus/code/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/home/herazeus/code/substrate/primitives/arithmetic" }
sp-weights = { path = "/home/herazeus/code/substrate/primitives/weights" }
substrate-test-runtime-client = { path = "/home/herazeus/code/substrate/test-utils/runtime/client" }
sc-block-builder = { path = "/home/herazeus/code/substrate/client/block-builder" }
sc-client-api = { path = "/home/herazeus/code/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/home/herazeus/code/substrate/utils/prometheus" }
sc-executor = { path = "/home/herazeus/code/substrate/client/executor" }
sc-executor-common = { path = "/home/herazeus/code/substrate/client/executor/common" }
sc-allocator = { path = "/home/herazeus/code/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/home/herazeus/code/substrate/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/home/herazeus/code/substrate/client/executor/wasmtime" }
sc-runtime-test = { path = "/home/herazeus/code/substrate/client/executor/runtime-test" }
substrate-wasm-builder = { path = "/home/herazeus/code/substrate/utils/wasm-builder" }
sp-version = { path = "/home/herazeus/code/substrate/primitives/version" }
sp-core-hashing-proc-macro = { path = "/home/herazeus/code/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/home/herazeus/code/substrate/primitives/version/proc-macro" }
sc-tracing = { path = "/home/herazeus/code/substrate/client/tracing" }
sc-tracing-proc-macro = { path = "/home/herazeus/code/substrate/client/tracing/proc-macro" }
sp-blockchain = { path = "/home/herazeus/code/substrate/primitives/blockchain" }
sp-consensus = { path = "/home/herazeus/code/substrate/primitives/consensus/common" }
sp-inherents = { path = "/home/herazeus/code/substrate/primitives/inherents" }
sp-test-primitives = { path = "/home/herazeus/code/substrate/primitives/test-primitives" }
sp-database = { path = "/home/herazeus/code/substrate/primitives/database" }
sp-rpc = { path = "/home/herazeus/code/substrate/primitives/rpc" }
substrate-test-runtime = { path = "/home/herazeus/code/substrate/test-utils/runtime" }
frame-executive = { path = "/home/herazeus/code/substrate/frame/executive" }
frame-system = { path = "/home/herazeus/code/substrate/frame/system" }
frame-try-runtime = { path = "/home/herazeus/code/substrate/frame/try-runtime" }
pallet-balances = { path = "/home/herazeus/code/substrate/frame/balances" }
pallet-transaction-payment = { path = "/home/herazeus/code/substrate/frame/transaction-payment" }
frame-system-rpc-runtime-api = { path = "/home/herazeus/code/substrate/frame/system/rpc/runtime-api" }
pallet-babe = { path = "/home/herazeus/code/substrate/frame/babe" }
pallet-authorship = { path = "/home/herazeus/code/substrate/frame/authorship" }
pallet-session = { path = "/home/herazeus/code/substrate/frame/session" }
pallet-timestamp = { path = "/home/herazeus/code/substrate/frame/timestamp" }
sp-timestamp = { path = "/home/herazeus/code/substrate/primitives/timestamp" }
sp-session = { path = "/home/herazeus/code/substrate/primitives/session" }
sp-staking = { path = "/home/herazeus/code/substrate/primitives/staking" }
sp-consensus-babe = { path = "/home/herazeus/code/substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "/home/herazeus/code/substrate/primitives/consensus/slots" }
frame-election-provider-support = { path = "/home/herazeus/code/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/home/herazeus/code/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/home/herazeus/code/substrate/primitives/npos-elections" }
substrate-test-utils = { path = "/home/herazeus/code/substrate/test-utils" }
substrate-test-utils-derive = { path = "/home/herazeus/code/substrate/test-utils/derive" }
sc-service = { path = "/home/herazeus/code/substrate/client/service" }
sc-chain-spec = { path = "/home/herazeus/code/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/home/herazeus/code/substrate/client/chain-spec/derive" }
sc-network = { path = "/home/herazeus/code/substrate/client/network" }
sc-network-common = { path = "/home/herazeus/code/substrate/client/network/common" }
sc-consensus = { path = "/home/herazeus/code/substrate/client/consensus/common" }
sc-utils = { path = "/home/herazeus/code/substrate/client/utils" }
sp-consensus-grandpa = { path = "/home/herazeus/code/substrate/primitives/consensus/grandpa" }
sc-network-light = { path = "/home/herazeus/code/substrate/client/network/light" }
sc-network-sync = { path = "/home/herazeus/code/substrate/client/network/sync" }
fork-tree = { path = "/home/herazeus/code/substrate/utils/fork-tree" }
sc-telemetry = { path = "/home/herazeus/code/substrate/client/telemetry" }
sc-client-db = { path = "/home/herazeus/code/substrate/client/db" }
sc-state-db = { path = "/home/herazeus/code/substrate/client/state-db" }
kitchensink-runtime = { path = "/home/herazeus/code/substrate/bin/node/runtime" }
frame-benchmarking-pallet-pov = { path = "/home/herazeus/code/substrate/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/home/herazeus/code/substrate/frame/system/benchmarking" }
node-primitives = { path = "/home/herazeus/code/substrate/bin/node/primitives" }
pallet-alliance = { path = "/home/herazeus/code/substrate/frame/alliance" }
pallet-collective = { path = "/home/herazeus/code/substrate/frame/collective" }
pallet-identity = { path = "/home/herazeus/code/substrate/frame/identity" }
pallet-asset-conversion = { path = "/home/herazeus/code/substrate/frame/asset-conversion" }
pallet-assets = { path = "/home/herazeus/code/substrate/frame/assets" }
pallet-asset-conversion-tx-payment = { path = "/home/herazeus/code/substrate/frame/transaction-payment/asset-conversion-tx-payment" }
pallet-asset-rate = { path = "/home/herazeus/code/substrate/frame/asset-rate" }
pallet-asset-tx-payment = { path = "/home/herazeus/code/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-authority-discovery = { path = "/home/herazeus/code/substrate/frame/authority-discovery" }
sp-authority-discovery = { path = "/home/herazeus/code/substrate/primitives/authority-discovery" }
pallet-bags-list = { path = "/home/herazeus/code/substrate/frame/bags-list" }
pallet-bounties = { path = "/home/herazeus/code/substrate/frame/bounties" }
pallet-treasury = { path = "/home/herazeus/code/substrate/frame/treasury" }
pallet-utility = { path = "/home/herazeus/code/substrate/frame/utility" }
pallet-root-testing = { path = "/home/herazeus/code/substrate/frame/root-testing" }
pallet-child-bounties = { path = "/home/herazeus/code/substrate/frame/child-bounties" }
pallet-contracts = { path = "/home/herazeus/code/substrate/frame/contracts" }
pallet-contracts-primitives = { path = "/home/herazeus/code/substrate/frame/contracts/primitives" }
pallet-contracts-proc-macro = { path = "/home/herazeus/code/substrate/frame/contracts/proc-macro" }
pallet-insecure-randomness-collective-flip = { path = "/home/herazeus/code/substrate/frame/insecure-randomness-collective-flip" }
pallet-proxy = { path = "/home/herazeus/code/substrate/frame/proxy" }
pallet-conviction-voting = { path = "/home/herazeus/code/substrate/frame/conviction-voting" }
pallet-scheduler = { path = "/home/herazeus/code/substrate/frame/scheduler" }
pallet-preimage = { path = "/home/herazeus/code/substrate/frame/preimage" }
pallet-core-fellowship = { path = "/home/herazeus/code/substrate/frame/core-fellowship" }
pallet-democracy = { path = "/home/herazeus/code/substrate/frame/democracy" }
pallet-election-provider-multi-phase = { path = "/home/herazeus/code/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/home/herazeus/code/substrate/frame/election-provider-support/benchmarking" }
pallet-elections-phragmen = { path = "/home/herazeus/code/substrate/frame/elections-phragmen" }
pallet-fast-unstake = { path = "/home/herazeus/code/substrate/frame/fast-unstake" }
pallet-staking = { path = "/home/herazeus/code/substrate/frame/staking" }
pallet-staking-reward-curve = { path = "/home/herazeus/code/substrate/frame/staking/reward-curve" }
pallet-glutton = { path = "/home/herazeus/code/substrate/frame/glutton" }
pallet-grandpa = { path = "/home/herazeus/code/substrate/frame/grandpa" }
pallet-offences = { path = "/home/herazeus/code/substrate/frame/offences" }
sp-keyring = { path = "/home/herazeus/code/substrate/primitives/keyring" }
pallet-im-online = { path = "/home/herazeus/code/substrate/frame/im-online" }
pallet-indices = { path = "/home/herazeus/code/substrate/frame/indices" }
pallet-lottery = { path = "/home/herazeus/code/substrate/frame/lottery" }
frame-support-test = { path = "/home/herazeus/code/substrate/frame/support/test" }
frame-support-test-pallet = { path = "/home/herazeus/code/substrate/frame/support/test/pallet" }
pallet-membership = { path = "/home/herazeus/code/substrate/frame/membership" }
pallet-message-queue = { path = "/home/herazeus/code/substrate/frame/message-queue" }
pallet-mmr = { path = "/home/herazeus/code/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/home/herazeus/code/substrate/primitives/merkle-mountain-range" }
pallet-multisig = { path = "/home/herazeus/code/substrate/frame/multisig" }
pallet-nft-fractionalization = { path = "/home/herazeus/code/substrate/frame/nft-fractionalization" }
pallet-nfts = { path = "/home/herazeus/code/substrate/frame/nfts" }
pallet-nfts-runtime-api = { path = "/home/herazeus/code/substrate/frame/nfts/runtime-api" }
pallet-nis = { path = "/home/herazeus/code/substrate/frame/nis" }
pallet-nomination-pools = { path = "/home/herazeus/code/substrate/frame/nomination-pools" }
pallet-nomination-pools-benchmarking = { path = "/home/herazeus/code/substrate/frame/nomination-pools/benchmarking" }
pallet-nomination-pools-runtime-api = { path = "/home/herazeus/code/substrate/frame/nomination-pools/runtime-api" }
pallet-offences-benchmarking = { path = "/home/herazeus/code/substrate/frame/offences/benchmarking" }
pallet-ranked-collective = { path = "/home/herazeus/code/substrate/frame/ranked-collective" }
pallet-recovery = { path = "/home/herazeus/code/substrate/frame/recovery" }
pallet-referenda = { path = "/home/herazeus/code/substrate/frame/referenda" }
pallet-remark = { path = "/home/herazeus/code/substrate/frame/remark" }
pallet-salary = { path = "/home/herazeus/code/substrate/frame/salary" }
pallet-session-benchmarking = { path = "/home/herazeus/code/substrate/frame/session/benchmarking" }
pallet-society = { path = "/home/herazeus/code/substrate/frame/society" }
pallet-staking-runtime-api = { path = "/home/herazeus/code/substrate/frame/staking/runtime-api" }
pallet-state-trie-migration = { path = "/home/herazeus/code/substrate/frame/state-trie-migration" }
frame-remote-externalities = { path = "/home/herazeus/code/substrate/utils/frame/remote-externalities" }
substrate-rpc-client = { path = "/home/herazeus/code/substrate/utils/frame/rpc/client" }
sc-rpc-api = { path = "/home/herazeus/code/substrate/client/rpc-api" }
sc-transaction-pool-api = { path = "/home/herazeus/code/substrate/client/transaction-pool/api" }
substrate-state-trie-migration-rpc = { path = "/home/herazeus/code/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-statement = { path = "/home/herazeus/code/substrate/frame/statement" }
sp-statement-store = { path = "/home/herazeus/code/substrate/primitives/statement-store" }
pallet-sudo = { path = "/home/herazeus/code/substrate/frame/sudo" }
pallet-tips = { path = "/home/herazeus/code/substrate/frame/tips" }
pallet-transaction-payment-rpc-runtime-api = { path = "/home/herazeus/code/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-storage = { path = "/home/herazeus/code/substrate/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/home/herazeus/code/substrate/primitives/transaction-storage-proof" }
pallet-uniques = { path = "/home/herazeus/code/substrate/frame/uniques" }
pallet-vesting = { path = "/home/herazeus/code/substrate/frame/vesting" }
pallet-whitelist = { path = "/home/herazeus/code/substrate/frame/whitelist" }
sp-block-builder = { path = "/home/herazeus/code/substrate/primitives/block-builder" }
sp-offchain = { path = "/home/herazeus/code/substrate/primitives/offchain" }
sp-transaction-pool = { path = "/home/herazeus/code/substrate/primitives/transaction-pool" }
sc-informant = { path = "/home/herazeus/code/substrate/client/informant" }
sc-keystore = { path = "/home/herazeus/code/substrate/client/keystore" }
sc-network-bitswap = { path = "/home/herazeus/code/substrate/client/network/bitswap" }
sc-network-transactions = { path = "/home/herazeus/code/substrate/client/network/transactions" }
sc-rpc = { path = "/home/herazeus/code/substrate/client/rpc" }
sc-transaction-pool = { path = "/home/herazeus/code/substrate/client/transaction-pool" }
substrate-test-runtime-transaction-pool = { path = "/home/herazeus/code/substrate/test-utils/runtime/transaction-pool" }
sc-rpc-server = { path = "/home/herazeus/code/substrate/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/home/herazeus/code/substrate/client/rpc-spec-v2" }
sc-sysinfo = { path = "/home/herazeus/code/substrate/client/sysinfo" }
sp-consensus-aura = { path = "/home/herazeus/code/substrate/primitives/consensus/aura" }
substrate-test-client = { path = "/home/herazeus/code/substrate/test-utils/client" }
sc-offchain = { path = "/home/herazeus/code/substrate/client/offchain" }
sp-runtime-interface-test-wasm = { path = "/home/herazeus/code/substrate/primitives/runtime-interface/test-wasm" }
sp-metadata-ir = { path = "/home/herazeus/code/substrate/primitives/metadata-ir" }
frame-benchmarking-cli = { path = "/home/herazeus/code/substrate/utils/frame/benchmarking-cli" }
sc-cli = { path = "/home/herazeus/code/substrate/client/cli" }
node-template-runtime = { path = "/home/herazeus/code/substrate/bin/node-template/runtime" }
pallet-aura = { path = "/home/herazeus/code/substrate/frame/aura" }
pallet-template = { path = "/home/herazeus/code/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc = { path = "/home/herazeus/code/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = "/home/herazeus/code/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/home/herazeus/code/substrate/client/proposer-metrics" }
sc-consensus-aura = { path = "/home/herazeus/code/substrate/client/consensus/aura" }
sc-consensus-slots = { path = "/home/herazeus/code/substrate/client/consensus/slots" }
sc-network-test = { path = "/home/herazeus/code/substrate/client/network/test" }
sc-consensus-grandpa = { path = "/home/herazeus/code/substrate/client/consensus/grandpa" }
sc-network-gossip = { path = "/home/herazeus/code/substrate/client/network-gossip" }
substrate-frame-rpc-system = { path = "/home/herazeus/code/substrate/utils/frame/rpc/system" }
try-runtime-cli = { path = "/home/herazeus/code/substrate/utils/frame/try-runtime/cli" }
substrate-cli-test-utils = { path = "/home/herazeus/code/substrate/test-utils/cli" }
substrate-build-script-utils = { path = "/home/herazeus/code/substrate/utils/build-script-utils" }
node-bench = { path = "/home/herazeus/code/substrate/bin/node/bench" }
node-testing = { path = "/home/herazeus/code/substrate/bin/node/testing" }
node-executor = { path = "/home/herazeus/code/substrate/bin/node/executor" }
node-cli = { path = "/home/herazeus/code/substrate/bin/node/cli" }
node-inspect = { path = "/home/herazeus/code/substrate/bin/node/inspect" }
node-rpc = { path = "/home/herazeus/code/substrate/bin/node/rpc" }
mmr-rpc = { path = "/home/herazeus/code/substrate/client/merkle-mountain-range/rpc" }
sc-consensus-babe = { path = "/home/herazeus/code/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/home/herazeus/code/substrate/client/consensus/epochs" }
sc-consensus-babe-rpc = { path = "/home/herazeus/code/substrate/client/consensus/babe/rpc" }
sc-consensus-grandpa-rpc = { path = "/home/herazeus/code/substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/home/herazeus/code/substrate/client/sync-state-rpc" }
sc-authority-discovery = { path = "/home/herazeus/code/substrate/client/authority-discovery" }
sc-network-statement = { path = "/home/herazeus/code/substrate/client/network/statement" }
sc-statement-store = { path = "/home/herazeus/code/substrate/client/statement-store" }
sc-storage-monitor = { path = "/home/herazeus/code/substrate/client/storage-monitor" }
sc-service-test = { path = "/home/herazeus/code/substrate/client/service/test" }
substrate-frame-cli = { path = "/home/herazeus/code/substrate/utils/frame/frame-utilities-cli" }
chain-spec-builder = { path = "/home/herazeus/code/substrate/bin/utils/chain-spec-builder" }
subkey = { path = "/home/herazeus/code/substrate/bin/utils/subkey" }
sc-consensus-beefy = { path = "/home/herazeus/code/substrate/client/consensus/beefy" }
sp-consensus-beefy = { path = "/home/herazeus/code/substrate/primitives/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/home/herazeus/code/substrate/client/consensus/beefy/rpc" }
sc-consensus-manual-seal = { path = "/home/herazeus/code/substrate/client/consensus/manual-seal" }
sc-consensus-pow = { path = "/home/herazeus/code/substrate/client/consensus/pow" }
sp-consensus-pow = { path = "/home/herazeus/code/substrate/primitives/consensus/pow" }
mmr-gadget = { path = "/home/herazeus/code/substrate/client/merkle-mountain-range" }
pallet-atomic-swap = { path = "/home/herazeus/code/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer = { path = "/home/herazeus/code/substrate/frame/bags-list/fuzzer" }
pallet-bags-list-remote-tests = { path = "/home/herazeus/code/substrate/frame/bags-list/remote-tests" }
pallet-beefy = { path = "/home/herazeus/code/substrate/frame/beefy" }
pallet-beefy-mmr = { path = "/home/herazeus/code/substrate/frame/beefy-mmr" }
binary-merkle-tree = { path = "/home/herazeus/code/substrate/utils/binary-merkle-tree" }
pallet-election-provider-e2e-test = { path = "/home/herazeus/code/substrate/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/home/herazeus/code/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-examples = { path = "/home/herazeus/code/substrate/frame/examples" }
pallet-default-config-example = { path = "/home/herazeus/code/substrate/frame/examples/default-config" }
pallet-dev-mode = { path = "/home/herazeus/code/substrate/frame/examples/dev-mode" }
pallet-example-basic = { path = "/home/herazeus/code/substrate/frame/examples/basic" }
pallet-example-kitchensink = { path = "/home/herazeus/code/substrate/frame/examples/kitchensink" }
pallet-example-offchain-worker = { path = "/home/herazeus/code/substrate/frame/examples/offchain-worker" }
pallet-example-split = { path = "/home/herazeus/code/substrate/frame/examples/split" }
pallet-nicks = { path = "/home/herazeus/code/substrate/frame/nicks" }
pallet-node-authorization = { path = "/home/herazeus/code/substrate/frame/node-authorization" }
pallet-nomination-pools-fuzzer = { path = "/home/herazeus/code/substrate/frame/nomination-pools/fuzzer" }
pallet-nomination-pools-test-staking = { path = "/home/herazeus/code/substrate/frame/nomination-pools/test-staking" }
pallet-scored-pool = { path = "/home/herazeus/code/substrate/frame/scored-pool" }
pallet-staking-reward-fn = { path = "/home/herazeus/code/substrate/frame/staking/reward-fn" }
pallet-root-offences = { path = "/home/herazeus/code/substrate/frame/root-offences" }
frame-support-test-compile-pass = { path = "/home/herazeus/code/substrate/frame/support/test/compile_pass" }
sp-api-test = { path = "/home/herazeus/code/substrate/primitives/api/test" }
sp-application-crypto-test = { path = "/home/herazeus/code/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/home/herazeus/code/substrate/primitives/arithmetic/fuzzer" }
sp-crypto-ec-utils = { path = "/home/herazeus/code/substrate/primitives/crypto/ec-utils" }
sp-genesis-builder = { path = "/home/herazeus/code/substrate/primitives/genesis-builder" }
sp-npos-elections-fuzzer = { path = "/home/herazeus/code/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/home/herazeus/code/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/home/herazeus/code/substrate/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/home/herazeus/code/substrate/scripts/ci/node-template-release" }
substrate-test-utils-test-crate = { path = "/home/herazeus/code/substrate/test-utils/test-crate" }
substrate-frame-rpc-support = { path = "/home/herazeus/code/substrate/utils/frame/rpc/support" }
generate-bags = { path = "/home/herazeus/code/substrate/utils/frame/generate-bags" }
node-runtime-generate-bags = { path = "/home/herazeus/code/substrate/utils/frame/generate-bags/node-runtime" }

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "security@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

[package.metadata.spellcheck]
config = "./scripts/ci/gitlab/spellcheck.toml"
